--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
 
     <div id="surveyRoot"></div>
 
+    <script src="js/main.js"></script>
+
+    <script>testStartup()</script>
 </body>
 </html>
