--- a/forms/enterId.html
+++ b/forms/enterId.html
@@ -1,4 +1,4 @@
-<form id="srv1">
+<form id="enterId">
     <p>Please type in your participationId:</p>
     <input type="text" name="participationId">
 </form><br>
