new next button in index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
     <div id="surveyRoot"></div>
 
+    <div id="controlButtons">
+        <button id="btnNext" onclick="nextForm()">Next</button>
+    </div>
+
     <script src="js/main.js"></script>
 
     <script>testStartup()</script>
