--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/slider.css">
 </head>
 <body>
     <p>Hello World! We are getting started.</p>
@@ -20,6 +21,7 @@
     </div>
 
     <script src="js/main.js"></script>
+    <script src="js/random.js"></script>
 
     <script>testStartup()</script>
 </body>
