--- a/forms/slider.html
+++ b/forms/slider.html
@@ -1,1 +1,4 @@
-<input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+<div class="slidecontainer" id="sliderContainer">
+    <script type="text/javascript" src="../js/random.js"></script>
+    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+</div>
