rewrote logic to use central functions and central buttons

--- a/forms/enterId.html
+++ b/forms/enterId.html
@@ -1,5 +1,4 @@
 <form id="enterId">
     <p>Please type in your participationId:</p>
     <input type="text" name="participationId">
-</form><br>
-<button onclick="setId()">Next</button>
+</form>
