--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
     <div id="surveyRoot"></div>
 
-    <div id="controlButtons">
+    <br>
+
+    <div>
+        <button id="btnPrev" onclick="prevForm()" style="visibility: hidden">Previous</button>
         <button id="btnNext" onclick="nextForm()">Next</button>
     </div>
 
