--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="css/slideshow.css">
 </head>
 <body>
     <p>Hello World! We are getting started.</p>
