--- a/forms/slideshow.html
+++ b/forms/slideshow.html
@@ -4,21 +4,18 @@
     </div>
 </div>
 <script>
-    var imgs = ["https://i.imgur.com/uQ8xE4A.jpg", "https://i.imgur.com/GWR6ZHE.jpg", "https://i.imgur.com/Xmwf3Fn.jpg"];
+    const images = ["https://i.imgur.com/uQ8xE4A.jpg", "https://i.imgur.com/GWR6ZHE.jpg", "https://i.imgur.com/Xmwf3Fn.jpg"];
+    let pos = 0;
 
-    function changeImage(dir) {
-        var img = document.getElementById("imgClickAndChange");
-
-        img.src = imgs[imgs.indexOf(img.src) + (dir || 1)] || imgs[dir ? imgs.length - 1 : 0];
+    function changeImage() {
+        let img = document.getElementById("imgClickAndChange");
+        img.src = images[pos];
     }
 
     document.onkeydown = function(e) {
         e = e || window.event;
-        if (e.keyCode == '37') {
-            changeImage(-1) //left <- show Prev image
-        } else if (e.keyCode == '39') {
-            // right -> show next image
-            changeImage()
-        }
+        if (e.keyCode == '37' && pos >= 0) pos -= 1;
+        else if (e.keyCode == '39' && pos < images.length-1) pos += 1;
+        changeImage()
     }
 </script>
