--- a/forms/slideshow.html
+++ b/forms/slideshow.html
@@ -4,8 +4,9 @@
     </div>
 </div>
 <script>
-    const images = ["https://i.imgur.com/uQ8xE4A.jpg", "https://i.imgur.com/GWR6ZHE.jpg", "https://i.imgur.com/Xmwf3Fn.jpg"];
+    const images = ["https://i.imgur.com/neIqyy3.jpg", "https://i.imgur.com/uQ8xE4A.jpg", "https://i.imgur.com/GWR6ZHE.jpg", "https://i.imgur.com/Xmwf3Fn.jpg"];
     let pos = 0;
+    let onTimeout = false;
 
     function changeImage() {
         let img = document.getElementById("imgClickAndChange");
@@ -14,8 +15,15 @@
 
     document.onkeydown = function(e) {
         e = e || window.event;
-        if (e.keyCode == '37' && pos >= 0) pos -= 1;
-        else if (e.keyCode == '39' && pos < images.length-1) pos += 1;
-        changeImage()
+        if (!onTimeout){
+            onTimeout = true;
+            if (e.keyCode == '37' && pos > 0) pos -= 1;
+            else if (e.keyCode == '39' && pos < images.length-1) pos += 1;
+            changeImage();
+            setTimeout(function () {
+                onTimeout = false;
+            }, 10);
+        }
+
     }
 </script>
