--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <script src="js/main.js"></script>
     <script src="js/random.js"></script>
+    <script src="js/slideshow.js"></script>
 
     <script>testStartup()</script>
 </body>
