--- a/forms/lastEat.html
+++ b/forms/lastEat.html
@@ -1,4 +1,3 @@
-<form id="lastEat">
-    <p>When did you last eat something?</p>
-    <input type="time">
-</form>
+
+<p>When did you last eat something?</p>
+<input type="time" id="lastEat">
