--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/slideshow.css">
 </head>
 <body>
-    <p>Hello World! We are getting started.</p>
 
     <div id="surveyRoot"></div>
 
@@ -24,7 +23,6 @@
     <script src="js/main.js"></script>
     <script src="js/random.js"></script>
     <script src="js/slideshow.js"></script>
-
-    <script>testStartup()</script>
+    <script>inflateForm("enterId.html")</script>
 </body>
 </html>
