--- a/forms/gcf.html
+++ b/forms/gcf.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div>
+    <img src = "https://i.imgur.com/glOvqRR.jpg" alt="food" width="768px" height="576px">
+    <br>
+    <span class = "textDay">Per day</span>
+    <input type = "number" min="0" placeholder = "0" id = "gcfDay">
+    <input type = "number" min="0" placeholder = "0" id = "gcfWeek">
+    <input type = "number" min="0" placeholder = "0" id = "gcfMonth">
+    <input type = "number" min="0" placeholder = "0" id = "gcfYear">
+</div>
 
-</body>
-</html>
